# fetchkit

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml  release.yml
crates/fetchkit/: Cargo.toml
crates/fetchkit-cli/: Cargo.toml
crates/fetchkit-cli/src/: main.rs  mcp.rs
crates/fetchkit-python/: Cargo.toml
crates/fetchkit-python/src/: lib.rs
crates/fetchkit/examples/: fetch_urls.rs
crates/fetchkit/src/: client.rs  convert.rs  error.rs  lib.rs  tool.rs  types.rs
crates/fetchkit/src/fetchers/: default.rs  github_repo.rs  mod.rs
crates/fetchkit/tests/: integration.rs
crates/webfetch/: Cargo.toml
crates/webfetch-cli/: Cargo.toml
crates/webfetch-cli/src/: main.rs  mcp.rs
crates/webfetch-mcp/: Cargo.toml
crates/webfetch-mcp/src/: main.rs
crates/webfetch-python/: Cargo.toml
crates/webfetch-python/src/: lib.rs
crates/webfetch/src/: client.rs  error.rs  lib.rs  tool.rs  types.rs
crates/webfetch/tests/: integration.rs
docs/: release-process.md
examples/: README.md  langchain_summarize.py  simple_mcp_client.py
specs/: fetchers.md  initial.md  maintenance.md
