[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Everruns"]
repository = "https://github.com/everruns/fetchkit"
description = "AI-friendly web content fetching and HTML-to-Markdown conversion library"
keywords = ["fetch", "web", "markdown", "llm", "ai"]
categories = ["web-programming", "text-processing"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

# HTTP client
reqwest = { version = "0.13", features = ["gzip", "brotli", "deflate", "stream", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Schema generation
schemars = "1"

# URL parsing
url = "2"

# Logging
tracing = "0.1"

# Error handling
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Async streaming
futures = "0.3"
bytes = "1"

# Testing
wiremock = "0.6"

# Async traits
async-trait = "0.1"
