[package]
name = "fetchkit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI for the FetchKit tool"

[[bin]]
name = "fetchkit"
path = "src/main.rs"

[dependencies]
fetchkit = { version = "0.1.0", path = "../fetchkit" }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
