[package]
name = "fetchkit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command line interface for FetchKit web content fetching tool"
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "fetchkit"
path = "src/main.rs"

[dependencies]
fetchkit = { path = "../fetchkit", version = "0.1.0" }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
