[package]
name = "fetchkit-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Python bindings for the FetchKit library"
publish = false

[lib]
name = "fetchkit_py"
crate-type = ["cdylib"]

[dependencies]
fetchkit = { path = "../fetchkit" }
pyo3 = { version = "0.22", features = ["extension-module"] }
tokio = { workspace = true }
serde_json = { workspace = true }
