[package]
name = "webfetch-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI for the WebFetch tool"

[[bin]]
name = "webfetch"
path = "src/main.rs"

[dependencies]
webfetch = { path = "../webfetch" }
tokio = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
