[package]
name = "webfetch-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Python bindings for the WebFetch library"

[lib]
name = "webfetch_py"
crate-type = ["cdylib"]

[dependencies]
webfetch = { path = "../webfetch" }
pyo3 = { version = "0.22", features = ["extension-module"] }
tokio = { workspace = true }
serde_json = { workspace = true }
